# MCRay-Tracing

./: .gitignore  CMAKEPREVIO.txt  CMakeLists.txt  Notas  Old_CMakeLists.txt  README.md
CMake/: FindOptiX.cmake
DeletedFiles/: scene.cpp  scene.h
cuda/: material.cu  material.h  phong.cu  phong.h  ray_collision.cu  ray_collision.h
examples/ircad11/: ircad11.scene  santi-liver.scene  santi-morison1.scene  santi-morison2.scene
examples/sphere/: box.scene  liver.scene  simple.scene  sphere.scene
ptx/: constantbg.ptx  ray_gen.ptx
src/: CMakeLists.txt  camera.h  constantbg.cu  inputmanager.cpp  inputmanager.h  main.cpp  mesh.h  objloader.h  psf.h  random.cu  ray.cpp  ray.h  ray_gen.cu  rfimage.cu  rfimage.h  scene.cpp  scene.h  transducer.h  volume.h
src/OpenGL/: GLInstanceGraphicsShape.h
sutil/: Mesh.cpp  OptiXMesh.cpp
utils/: vtp_to_obj.py
